--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
