--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@reduxjs/toolkit": "^2.0.1",
     "compressorjs": "^1.2.1",
