--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chat-elements": "^12.0.11",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
