--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
