--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.25.0",
+    "axios": "^1.6.7",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
